# InfraSurveyor

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  codeqlp-analysis.yml  python-app.yml  release.yml  test-release.yml
docs/: auto-documenting.md  diagrams.md  index.md
src/: requirements.txt  setup.py
src/infra_surveyor/: __init__.py  commands.py  graphing.py  icons.py
src/infra_surveyor/cloud/: __init__.py  models.py
src/infra_surveyor/cloud/aws/: __init__.py  boto_utilities.py  code_guru.py  ec2_autoscaling.py  event_rules.py  lambda_functions.py  sns_topics.py  sqs_queues.py  states.py
src/infra_surveyor_aws_icons/: __init__.py  _version.py  icon_types.py  image_format.py  loader.py
src/surveyor/: commands.py  graphing.py  icons.py  main.py  models.py
src/surveyor/cloud/: __init__.py
src/surveyor/cloud/aws/: __init__.py  boto_utilities.py  event_rules.py  lambda_functions.py  sns_topics.py  sqs_queues.py
src/surveyor/commands/: aws.py
src/surveyor_aws_icons/: __init__.py  _version.py  icon_sets.py  icon_types.py  loader.py
test/: test-chart  test_aws_resource_loader.py  test_cli_structure.py  test_create_graph.py
tests/: test-chart  test_aws_resource_loader.py  test_aws_survey_events.py  test_aws_survey_lambda.py  test_aws_survey_sns.py  test_aws_survey_sqs.py  test_boto_utilities.py  test_cli_structure.py  test_create_graph.py  test_icons.py  test_survey_command.py
tests/aws/: test_aws_resource_loader.py  test_aws_survey.py  test_aws_survey_events.py  test_aws_survey_lambda.py  test_aws_survey_sns.py  test_aws_survey_sqs.py  test_boto_utilities.py  test_icons.py
tests/helpers/: __init__.py  event_helper.py  lambda_helpers.py  sns_helper.py  sqs_helper.py
