[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "infra_surveyor"
description = "An Autodocumenting tool for Cloud Infrastructure"
keywords = ["AWS", "Cloud", "Documentation", "Architecture"]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "click",
    "awscrt",
    "boto3[crt]",
    "graphviz",
]
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent"
]

[project.urls]
documentation="https://infrasurveyor.readthedocs.io/en/latest/"
repository="https://github.com/DavidWylie/InfraSurveyor"
changelog="https://github.com/DavidWylie/InfraSurveyor/CHANGELOG.md"

[project.optional-dependencies]
dev = ["moto[all]", "docker", "coverage[toml]", "pytest-cov", "black", "python-semantic-release"]
release = ["build"]
docs = ["mkdocs==1.3.0", "mkdocs-redirects==1.0.1", "jinja2==3.0.3"]

[project.scripts]
surveyor="infra_surveyor.commands:cli"

[tool.coverage.run]
include = ["src/infra_surveyor/*", "src/infra_surveyor_aws_icons/*"]
omit = ["tests/*"]

[tool.coverage.html]
directory = "out/report/coverage_html"

[tool.coverage.xml]
output = "out/report/coverage.xml"

[tool.pytest.ini_options]
pythonpath = "src/"

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38']
include = '\.pyi?$'

[tool.semantic_release]
branch = "main"
version_variable = "src/infra_surveyor/_version.py:__version__"
tag_commit = true
commit_version_number = true
commit_subject = ":bookmark: Release {version}"
commit_parser = "semantic_release.history.emoji_parser"
upload_to_repository = false
upload_to_release = false

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
infra_surveyor_aws_icons = [
    "Architecture*/Arch*/Arch*/*.svg",
    "Architecture*/Arch*/Arch*/*.png",
    "Category*/Arch*/*.png",
    "Category*/Arch*/*.svg",
    "Resource*/Res*/Res*/*.png",
    "Resource*/Res*/Res*/*.svg",
]

[tool.setuptools.packages.find]
where = ["src"]  # list of folders that contain the packages (["."] by default)
include = ["infra_surveyor*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["tests", "docs"]  # exclude packages matching these glob patterns (empty by default)
namespaces = false  # to disable scanning PEP 420 namespaces (true by default)


[tool.setuptools.dynamic]
version = {attr = "infra_surveyor._version.__version__"}