[metadata]
name = infra_surveyor
version = attr: infra_surveyor._version.__version__
description = An Auto-documenting tool for Cloud Infrastructure
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DavidWylie/InfraSurveyor"
project_urls =
    Documentation="https://infrasurveyor.readthedocs.io/en/latest/"


[options]
package_dir =
    = src
packages = find:
include_package_data=True

[options.packages.find]
where = src

[options.package_data]
infra_surveyor_aws_icons =
    Architecture*/Arch*/Arch*/*.svg
    Architecture*/Arch*/Arch*/*.png
    Category*/Arch*/*.png
    Category*/Arch*/*.svg
    Resource*/Res*/Res*/*.png
    Resource*/Res*/Res*/*.svg
